# viriatum

./: .clang-format  .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Common.am  DUMP.md  Dockerfile  Dockerfile.all  Dockerfile.php  MULTIPLE_WORKERS  Makefile-autoconfig  Makefile-gen  Makefile.am  README.md  README2.md  TODO  TODO.md  autogen.sh  build.sh  conanfile.txt  configure.ac  index.html  params.json  readme.md  update_sources.bat
modules/: CMakeLists.txt  configure_mod_lua.ac
modules/m4/: output.m4
modules/mod_diag/: CMakeLists.txt  Common.am  Makefile-gen  Makefile.am  autogen.sh  configure.ac
modules/mod_diag/m4/: Makefile.am  characteristics.m4  exports.m4  headers.m4  libraries.m4  message.m4  output.m4  programs.m4  settings.m4
modules/mod_diag/src/: Makefile.am
modules/mod_gif/: CMakeLists.txt  Common.am  Makefile.am  autogen.sh  configure.ac
modules/mod_gif/m4/: Makefile.am  characteristics.m4  exports.m4  features.m4  headers.m4  libraries.m4  message.m4  output.m4  programs.m4  settings.m4
modules/mod_gif/src/: Makefile.am
modules/mod_lua/: CMakeLists.txt  Common.am  Makefile-autoconfig  Makefile-gen  Makefile.am  autogen.sh  configure.ac
modules/mod_lua/m4/: Makefile.am  characteristics.m4  exports.m4  features.m4  headers.m4  libraries.m4  message.m4  output.m4  programs.m4  settings.m4
modules/mod_lua/src/: Makefile.am
modules/mod_php/: CMakeLists.txt  Common.am  Makefile-autoconfig  Makefile-gen  Makefile.am  autogen.sh  configure.ac
modules/mod_php/m4/: Makefile.am  characteristics.m4  exports.m4  features.m4  headers.m4  libraries.m4  message.m4  output.m4  programs.m4  settings.m4
modules/mod_php/src/: Makefile.am
modules/mod_wsgi/: CMakeLists.txt  Common.am  Makefile-gen  Makefile.am  autogen.sh  configure.ac
modules/mod_wsgi/m4/: Makefile.am  characteristics.m4  exports.m4  features.m4  headers.m4  libraries.m4  message.m4  output.m4  programs.m4  settings.m4
modules/mod_wsgi/src/: Makefile.am
src/: Makefile.am
src/hive_viriatum/: Makefile.am  ReadMe.txt  _config_win32.h  config.h  logging.c  logging.h  service.c  service.h  service_select.c  service_select.h  stdafx.c  stdafx.h  targetver.h  viriatum.c  viriatum.h
src/hive_viriatum/base/: base.h  entry.h
src/hive_viriatum/checksum/: checksum.h  crc_32.c  crc_32.h
src/hive_viriatum/encoding/: base_64.c  base_64.h  encoding.h
src/hive_viriatum/global/: common.h  definitions.h  platforms.h  resource.h  targetver.h
src/hive_viriatum/handlers/: handler_default.c  handler_default.h  handler_dispatch.c  handler_dispatch.h  handler_file.c  handler_file.h  handler_proxy.c  handler_proxy.h  handler_request.c  handler_request.h  handlers.h
src/hive_viriatum/http/: http.h  http_parser.c  http_parser.h  http_request.c  http_request.h  http_util.c  http_util.h  message_parser.c  message_parser.h  request.c
src/hive_viriatum/io/: file.c  file.h  io.h
src/hive_viriatum/jni/: info.c  info.h  jni.h  jni_service.c  jni_service.h  service.c  service.h  start.c  start.h
src/hive_viriatum/module/: loading.c  loading.h  module.h
src/hive_viriatum/polling/: polling.h  polling_epoll.c  polling_epoll.h  polling_kqueue.c  polling_select.c  polling_select.h
src/hive_viriatum/resources/: Makefile.am
src/hive_viriatum/stream/: stream.h  stream_http.c  stream_http.h  stream_httpc.c  stream_httpc.h  stream_io.c  stream_io.h  stream_torrent.c  stream_torrent.h
src/hive_viriatum/structures/: array_list.c  array_list.h  hash_map.c  hash_map.h  linked_list.c  linked_list.h  structures.h
src/hive_viriatum/system/: client.c  client.h  environment.c  environment.h  service.c  service.h  service_select.c  service_select.h  socket.h  system.h  system_util.h  thread.h  torrent.c  torrent.h
src/hive_viriatum/test/: simple_test.c  simple_test.h  speed_test.c  speed_test.h  test.h
src/hive_viriatum/thread/: thread.h  thread_pool.c  thread_pool.h
src/hive_viriatum_commons/: Makefile.am  ReadMe.txt  _config_win32.h  config.h  stdafx.c  stdafx.h  viriatum_commons.h
src/hive_viriatum_commons/checksum/: checksum.h  crc_32.c  crc_32.h  md5.c  md5.h  sha1.c  sha1.h
src/hive_viriatum_commons/compression/: compression.h  huffman.c  huffman.h
src/hive_viriatum_commons/crypto/: crypto.h  rc4.c  rc4.h
src/hive_viriatum_commons/debug/: debug.h  error.c  error.h  logging.c  logging.h
src/hive_viriatum_commons/encoding/: base_64.c  base_64.h  bencoding.c  bencoding.h  encoding.h  percent.c  percent.h
src/hive_viriatum_commons/formats/: formats.h  passwd.c  passwd.h  url.c  url.h
src/hive_viriatum_commons/global/: common.h  compilation.h  compiler.h  cpu.h  definitions.h  memory.h  platforms.h  resource.h  targetver.h  types.h
src/hive_viriatum_commons/ini/: ini.c  ini.h
src/hive_viriatum_commons/io/: file.c  file.h  io.h
src/hive_viriatum_commons/jni/: info.c  info.h  jni.h  start.c  start.h
src/hive_viriatum_commons/memory/: memory.h  memory_pool.c  memory_pool.h
src/hive_viriatum_commons/sorting/: base.h  quicksort.c  quicksort.h  sorting.h
src/hive_viriatum_commons/stream/: bit_stream.c  bit_stream.h  file_stream.c  file_stream.h  io_stream.c  io_stream.h  memory_stream.c  memory_stream.h  stream.h
src/hive_viriatum_commons/structures/: array_list.c  array_list.h  buffer.c  buffer.h  date_time.c  date_time.h  hash_map.c  hash_map.h  iterator.c  iterator.h  linked_buffer.c  linked_buffer.h  linked_list.c  linked_list.h  priority_queue.c  priority_queue.h  sort_map.c  sort_map.h  string.c  string.h  string_buffer.c  string_buffer.h  structures.h  type.c  type.h
src/hive_viriatum_commons/system/: _thread_win32.c  _thread_win32.h  dynamic.h  socket.h  system.h  system_util.h  thread.h
src/hive_viriatum_mod_lua/: Makefile.am  ReadMe.txt  stdafx.c  stdafx.cpp  stdafx.h  viriatum_mod_lua.c  viriatum_mod_lua.h
src/viriatum/: Makefile.am  ReadMe.txt  _config_win32.h  stdafx.c  stdafx.h  test.sh  viriatum.c  viriatum.h
src/viriatum_commons/: Makefile.am  ReadMe.txt  _config_win32.h  stdafx.c  stdafx.h  viriatum_commons.h
(+453 files in other folders)
