# Hive Viriatum Web Server
# Copyright (C) 2008-2012 Hive Solutions Lda.
#
# This file is part of Hive Viriatum Web Server.
#
# Hive Viriatum Web Server is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Hive Viriatum Web Server is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Hive Viriatum Web Server. If not, see <http://www.gnu.org/licenses/>.

# __author__    = João Magalhães <joamag@hive.pt>
# __version__   = 1.0.0
# __revision__  = $LastChangedRevision$
# __date__      = $LastChangedDate$
# __copyright__ = Copyright (c) 2008-2012 Hive Solutions Lda.
# __license__   = GNU General Public License (GPL), Version 3

include $(top_srcdir)/Common.am

SUBDIRS = viriatum_commons viriatum

nobase_include_HEADERS = viriatum/stdafx.h \
viriatum/viriatum.h \
viriatum/base/base.h \
viriatum/base/entry.h \
viriatum/global/common.h \
viriatum/global/definitions.h \
viriatum/global/resource.h \
viriatum/global/targetver.h \
viriatum/handlers/handler_default.h \
viriatum/handlers/handler_dispatch.h \
viriatum/handlers/handler_file.h \
viriatum/handlers/handler_proxy.h \
viriatum/handlers/handlers.h \
viriatum/http/http.h \
viriatum/http/http_parser.h \
viriatum/http/http_request.h \
viriatum/http/http_util.h \
viriatum/jni/info.h \
viriatum/jni/jni.h \
viriatum/jni/jni_service.h \
viriatum/jni/start.h \
viriatum/module/loading.h \
viriatum/module/module.h \
viriatum/polling/polling.h \
viriatum/polling/polling_epoll.h \
viriatum/polling/polling_kqueue.h \
viriatum/polling/polling_select.h \
viriatum/stream/stream.h \
viriatum/stream/stream_http.h \
viriatum/stream/stream_httpc.h \
viriatum/stream/stream_io.h \
viriatum/stream/stream_torrent.h \
viriatum/system/client.h \
viriatum/system/environment.h \
viriatum/system/service.h \
viriatum/system/system.h \
viriatum/system/torrent.h \
viriatum/test/simple_test.h \
viriatum/test/speed_test.h \
viriatum/test/test.h \
viriatum_commons/stdafx.h \
viriatum_commons/viriatum_commons.h \
viriatum_commons/checksum/checksum.h \
viriatum_commons/checksum/crc_32.h \
viriatum_commons/checksum/md5.h \
viriatum_commons/checksum/sha1.h \
viriatum_commons/compression/compression.h \
viriatum_commons/compression/huffman.h \
viriatum_commons/crypto/crypto.h \
viriatum_commons/crypto/rc4.h \
viriatum_commons/debug/debug.h \
viriatum_commons/debug/error.h \
viriatum_commons/debug/logging.h \
viriatum_commons/encoding/base_64.h \
viriatum_commons/encoding/bencoding.h \
viriatum_commons/encoding/encoding.h \
viriatum_commons/encoding/percent.h \
viriatum_commons/formats/formats.h \
viriatum_commons/formats/passwd.h \
viriatum_commons/formats/url.h \
viriatum_commons/global/common.h \
viriatum_commons/global/compilation.h \
viriatum_commons/global/compiler.h \
viriatum_commons/global/cpu.h \
viriatum_commons/global/definitions.h \
viriatum_commons/global/memory.h \
viriatum_commons/global/platforms.h \
viriatum_commons/global/resource.h \
viriatum_commons/global/targetver.h \
viriatum_commons/global/types.h \
viriatum_commons/ini/ini.h \
viriatum_commons/io/file.h \
viriatum_commons/io/io.h \
viriatum_commons/jni/info.h \
viriatum_commons/jni/jni.h \
viriatum_commons/jni/start.h \
viriatum_commons/memory/memory.h \
viriatum_commons/memory/memory_pool.h \
viriatum_commons/sorting/base.h \
viriatum_commons/sorting/quicksort.h \
viriatum_commons/sorting/sorting.h \
viriatum_commons/stream/bit_stream.h \
viriatum_commons/stream/file_stream.h \
viriatum_commons/stream/io_stream.h \
viriatum_commons/stream/memory_stream.h \
viriatum_commons/stream/stream.h \
viriatum_commons/structures/array_list.h \
viriatum_commons/structures/buffer.h \
viriatum_commons/structures/date_time.h \
viriatum_commons/structures/hash_map.h \
viriatum_commons/structures/iterator.h \
viriatum_commons/structures/linked_buffer.h \
viriatum_commons/structures/linked_list.h \
viriatum_commons/structures/priority_queue.h \
viriatum_commons/structures/sort_map.h \
viriatum_commons/structures/string.h \
viriatum_commons/structures/string_buffer.h \
viriatum_commons/structures/structures.h \
viriatum_commons/structures/type.h \
viriatum_commons/system/_thread_win32.h \
viriatum_commons/system/dynamic.h \
viriatum_commons/system/socket.h \
viriatum_commons/system/system.h \
viriatum_commons/system/system_util.h \
viriatum_commons/system/thread.h \
viriatum_commons/template/engine.h \
viriatum_commons/template/handler.h \
viriatum_commons/template/template.h \
viriatum_commons/thread/thread.h \
viriatum_commons/thread/thread_pool.h \
viriatum_commons/util/arguments_util.h \
viriatum_commons/util/dump_util.h \
viriatum_commons/util/function_util.h \
viriatum_commons/util/random_util.h \
viriatum_commons/util/string_util.h \
viriatum_commons/util/string_util_s.h \
viriatum_commons/util/util.h
